<resources>
    <string name="app_name">GymApp</string>
    <string name="mon_card">Monday</string>
    <string name="tue_card">Tuesday</string>
    <string name="wed_card">Wednesday</string>
    <string name="thu_card">Thursday</string>
    <string name="fri_card">Friday</string>
    <string name="sat_card">Saturday</string>
    <string name="sun_card">Sunday</string>
    <string name="weather_card">Weather</string>
    <string name="weather_card_text">Could not read weather</string>
    <string name="create_workout">Create workout button</string>
    <string name="create_exercise_dialog_cancel_button">Cancel</string>
    <string name="weight">%1$.2fKg</string>
    <string name="create_exercise_dialog_create_button">Create Exercise</string>
    <string name="create_exercise_dialog_title">Enter Exercise Details</string>
    <string name="create_exercise_dialog_error_message">Please fill in all fields.</string>
    <string name="edit_exercise_dialog_cancel_button">Cancel</string>
    <string name="edit_exercise_dialog_save_button">Save</string>
    <string name="edit_exercise_dialog_title">Edit Exercise</string>
    <string name="edit_exercise_dialog_error_message">Please fill in all fields.</string>
    <string name="choose_exercise_type">Choose Exercise Type</string>
    <string name="choose_premade_exercise">Choose a premade exercise:</string>
    <string name="step_count">0 / 10000</string>
    <string name="steps_taken">Steps taken</string>
    <string name="hint_weight">Weight</string>
    <string name="repetitions">Repetitions</string>
    <string name="delete_button_description">Delete button</string>
    <string name="edit_button_description">Edit exercise button</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="workout_holder">Workout holder</string>
    <string name="home">Home</string>
    <string name="steps">Steps</string>
    <string name="add_premade_exercise">Add Premade Exercise</string>
    <string name="add_custom_exercise">Add Custom Exercise</string>
    <string name="edit">edit</string>
    <string name="favorite">favorite</string>
    <string name="more">more</string>
    <string name="menu_image">FroggyFlex logo</string>
    <string name="weatherfrog">WeatherFrog</string>
</resources>