<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/exercise_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="?attr/materialCardViewFilledStyle"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/exercise_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:text="@string/exercise_name"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/exercise_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:text="@string/hint_weight"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/exercise_repetitions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingEnd="8dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:text="@string/repetitions"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:drawablePadding="8dp"
            android:padding="4dp"
            app:icon="@drawable/edit"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="24dp"
            android:contentDescription="@string/edit_button_description"
            style="?attr/materialIconButtonFilledStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:drawablePadding="8dp"
            android:padding="4dp"
            app:icon="@drawable/deletebutt"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="24dp"
            android:contentDescription="@string/delete_button_description"
            style="?attr/materialIconButtonOutlinedStyle"/>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>