<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:subtitle="Ready for a workout?"
            app:subtitleTextAppearance="?attr/textAppearanceTitleSmall"
            app:subtitleTextColor="?attr/colorSecondaryContainer"
            app:title="FlexyFrog"
            app:titleTextAppearance="?attr/textAppearanceHeadlineMedium"
            app:titleTextColor="?attr/colorSurface"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/bottomNavigationStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:elevation="10dp"
        app:menu="@menu/bottom_navigation_menu"
        app:itemIconTint="?attr/colorOnSurfaceVariant"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintTop_toBottomOf="@+id/topAppBarLayout">

        <LinearLayout
            android:id="@+id/cardContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mondayCard"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="10dp"
                tools:layout_editor_absoluteX="3dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Media -->
                    <ImageView
                        android:id="@+id/mondayImage"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/neutral_weather"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/weather_card" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:id="@+id/mondayText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mon_card"
                            android:textAppearance="?attr/textAppearanceTitleLarge" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/tuesdayCard"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/mondayCard"
                tools:layout_editor_absoluteX="3dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Media -->
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/cloudy_weather"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/weather_card" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:id="@+id/tuesdayText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tue_card"
                            android:textAppearance="?attr/textAppearanceTitleLarge" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/wednesdayCard"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/tuesdayCard"
                tools:layout_editor_absoluteX="3dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Media -->
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/sunny_weather"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/weather_card" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:id="@+id/wednesdayText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wed_card"
                            android:textAppearance="?attr/textAppearanceTitleLarge" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/thursdayCard"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/wednesdayCard"
                tools:layout_editor_absoluteX="3dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Media -->
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/rainy_weather"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/weather_card" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:id="@+id/thursdayText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thu_card"
                            android:textAppearance="?attr/textAppearanceTitleLarge" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/fridayCard"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/thursdayCard"
                tools:layout_editor_absoluteX="3dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Media -->
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/neutral_weather"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/weather_card" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:id="@+id/fridayText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fri_card"
                            android:textAppearance="?attr/textAppearanceTitleLarge" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/saturdayCard"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/fridayCard"
                tools:layout_editor_absoluteX="3dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Media -->
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/neutral_weather"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/weather_card" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:id="@+id/saturdayText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sat_card"
                            android:textAppearance="?attr/textAppearanceTitleLarge" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/sundayCard"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintTop_toBottomOf="@+id/saturdayCard"
                tools:layout_editor_absoluteX="3dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Media -->
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/neutral_weather"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/weather_card" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:id="@+id/sundayText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sun_card"
                            android:textAppearance="?attr/textAppearanceTitleLarge" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>